[package]
name = "backend"
version = "0.1.0"
authors = ["Toby Murray <murray.toby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web.git" }

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }